[gd_scene load_steps=12 format=3 uid="uid://l15ou16u2m26"]

[ext_resource type="Script" path="res://Player.gd" id="1_1jao3"]
[ext_resource type="Script" path="res://ShootHandler.gd" id="2_jqhu0"]
[ext_resource type="Script" path="res://Damageable.gd" id="3_j554h"]
[ext_resource type="Script" path="res://ItemDetection.gd" id="4_5wad1"]
[ext_resource type="PackedScene" uid="uid://n27lgfphm5nb" path="res://player_ui.tscn" id="5_n8gcx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3a0s1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2wdik"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_p6fb8"]
size = Vector2(256, 256)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qk3w5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7hk4y"]

[sub_resource type="ViewportTexture" id="ViewportTexture_ni11g"]
viewport_path = NodePath("SubViewport")

[node name="Player" type="CharacterBody3D"]
collision_mask = 9
script = ExtResource("1_1jao3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3a0s1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_2wdik")

[node name="ShootHandler" type="Node3D" parent="."]
script = ExtResource("2_jqhu0")

[node name="Reticle" type="Node3D" parent="ShootHandler"]

[node name="Sprite3D" type="Sprite3D" parent="ShootHandler/Reticle"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
pixel_size = 0.002
texture = SubResource("PlaceholderTexture2D_p6fb8")

[node name="RotationalPivot" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="RotationalPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.336531, 1.27907, -1.76531)

[node name="CSGBox3D" type="CSGBox3D" parent="RotationalPivot/Marker3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00202441, -0.00556028, 0.651787)
size = Vector3(0.189941, 0.125549, 1.40149)

[node name="Damageable" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_j554h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damageable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_qk3w5")

[node name="ItemDetection" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_5wad1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_7hk4y")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(960, 540)
render_target_update_mode = 3

[node name="CanvasLayer" parent="SubViewport" instance=ExtResource("5_n8gcx")]

[node name="Node3D" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 2, 0)
texture = SubResource("ViewportTexture_ni11g")

[connection signal="fired" from="ShootHandler" to="." method="_on_shoot_handler_fired"]
[connection signal="reload_cancel" from="ShootHandler" to="SubViewport/CanvasLayer" method="_on_shoot_handler_reload_cancel"]
[connection signal="reload_start" from="ShootHandler" to="SubViewport/CanvasLayer" method="_on_shoot_handler_reload_start"]
[connection signal="damaged" from="Damageable" to="." method="_on_damageable_damaged"]
[connection signal="picked" from="ItemDetection" to="." method="_on_item_detection_picked"]
